Fixed(?) the overflow issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@
 html {
   font-size: 16px;
   position: relative;
-  overflow-x: hidden;
+
+  padding: 0;
+  margin: 0;
+  max-width: 100vw;
+  /* overflow-x: hidden; */
 }
 @media only screen and (min-width: 1250px){
   /* html {
@@ -12,7 +16,7 @@ html {
 }
 
 body {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   --isaelles-deep-blue: #2b2171;
   --isaelles-deep-blue-transparent: #2b217130;
   --isaelles-magenta: #a25ca1;
@@ -24,6 +28,9 @@ body {
 
   margin: 0;
   padding: 0;
+  /* overflow-x: hidden; */
+  max-width: 100vw;
+
   font-family: 'Montserrat', serif;
   font-size: 16px;
 
@@ -31,6 +38,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 .color-pink {
   color: var(--isaelles-pink);
@@ -49,8 +57,11 @@ body {
 }
 
 #root {
+  position: relative;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 code {
